--- a/f1tenth_stack/config/joy_teleop.yaml
+++ b/f1tenth_stack/config/joy_teleop.yaml
@@ -26,14 +26,14 @@ joy_teleop:
       type: topic
       interface_type: ackermann_msgs/msg/AckermannDriveStamped
       topic_name: teleop
-      deadman_buttons: [4]
+      #deadman_buttons: 
       axis_mappings:
         drive-speed:
           axis: 1
           scale: 5.0
           offset: 0.0
         drive-steering_angle:
-          axis: 2
+          axis: 3
           scale: 0.34
           offset: 0.0
 
