--- a/f1tenth_stack/config/joy_teleop.yaml
+++ b/f1tenth_stack/config/joy_teleop.yaml
@@ -1,10 +1,11 @@
 joy:
   ros__parameters:
-    # device_name: /dev/input/joypad-f710
+    #device_name: /dev/input/joypad-f710
     device_id: 0
     deadzone: 0.01
     autorepeat_rate: 20.0
     coalesce_interval: 0.01
+    sticky_buttons: true
 
 joy_teleop:
   ros__parameters:
@@ -12,36 +13,28 @@ joy_teleop:
       type: topic
       interface_type: ackermann_msgs/msg/AckermannDriveStamped
       topic_name: teleop
+      deadman_buttons: [4]
       axis_mappings:
         drive-speed:
           axis: 1
           scale: 0.0
           offset: 0.0
         drive-steering_angle:
-          axis: 2
+          axis: 3
           scale: 0.0
           offset: 0.0
-
+ 
     human_control:
       type: topic
       interface_type: ackermann_msgs/msg/AckermannDriveStamped
       topic_name: teleop
-      #deadman_buttons: 
+      deadman_buttons: [4]
       axis_mappings:
         drive-speed:
           axis: 1
-          scale: 5.0
+          scale: 10.0 
           offset: 0.0
         drive-steering_angle:
           axis: 3
           scale: 0.34
           offset: 0.0
-
-    autonomous_control:
-      type: topic
-      interface_type: std_msgs/msg/Int8
-      topic_name: /dev/null
-      deadman_buttons: [5]
-      message_value:
-        data:
-          value: 0
